fix title alignment on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -114,6 +114,7 @@
 
     .Title {
         left: inherit;
+        width: 100%;
     }
 
     .Image {
